--- a/views/layout.erb
+++ b/views/layout.erb
@@ -3,6 +3,10 @@
   <head>
     <title>Survey Homepage</title>
     <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css'>
+    <link  rel='stylesheet' href="/css/styles.css" >
+    <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
+    <script src="/js/scripts.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Cabin+Sketch" rel="stylesheet">
   </head>
   <body>
     <div class="container">
